--- a/src/app/Posts/create-post/create-post.component.html
+++ b/src/app/Posts/create-post/create-post.component.html
@@ -1,4 +1,7 @@
-<mat-card>
+<mat-spinner *ngIf="isLoading">
+
+</mat-spinner>
+<mat-card *ngIf="!isLoading">
   <form (submit)="onAddPost(postForm)" #postForm="ngForm">
 
     <mat-form-field>
