added cat facts API

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -4,6 +4,8 @@
     </span>
     <span class="spacer"></span>
     <ul>
+        <li>
+            <a mat-button routerLink="/catfact" routerLinkActive="active">Cat Fact</a></li>
         <li *ngIf="userIsAuthenticated">
             <a mat-button routerLink="/create" routerLinkActive="active">New Post</a></li>
         <li *ngIf="!userIsAuthenticated">
